Add TestData method to read images as bytes